# jax_cuda_boilerplate

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: mypy.yml
cuda_ray_jax/: registration.py  try.py
lib/: bindings.cc  kernels.cu  kernels.h  utils.h
scripts/: compare.py
src/: bindings_custom_calls.cc  bindings_jax_utils.cc  jax_utils.h  kernels.cu  kernels.h
src/jax_cuda_boilerplate/: custom_calls_ext.pyi  jax_cuda_utils.py  jax_cuda_utils.pyi  jax_utils_ext.pyi  ops.py  ops.pyi
